--- a/views/footer-template.ejs
+++ b/views/footer-template.ejs
@@ -1,6 +1,95 @@
 </div>
 <footer>
-    test123
+    <div class="btn-footer-flex">
+        <div class="drop-menu-footer">
+            <div class="btn-click-footer" onclick="showDropdownMenuFooter(this)">
+                <span>Каталог</span>
+                <svg class="arrow-footer">
+                    <use xlink:href="/main.svg#arrow-catalog-svg"></use>
+                </svg>
+            </div>
+            <div class="drop-down-menu-footer ">
+                <div>
+                    <a href="">Акции</a>
+                </div>
+                <div>
+                    <a href="">Бренды</a>
+                </div>
+                <div>
+                    <a href="">Каталог товаров</a>
+                </div>
+            </div>  
+        </div>
+        <div class="drop-menu-footer">
+            <div class="btn-click-footer" onclick="showDropdownMenuFooter(this)">
+                <span>Компания</span>
+                <svg class="arrow-footer">
+                    <use xlink:href="/main.svg#arrow-catalog-svg"></use>
+                </svg>
+            </div>
+            <div class="drop-down-menu-footer">
+                <div>
+                    <a href="">Отзывы</a>
+                </div>
+                <div>
+                    <a href="">Сертификаты</a>
+                </div>
+                <div>
+                    <a href="">Партнёрская программа</a>
+                </div>
+            </div>  
+        </div>
+        <div class="drop-menu-footer">
+            <div class="btn-click-footer" onclick="showDropdownMenuFooter(this)">
+                <span>Информация</span>
+                <svg class="arrow-footer">
+                    <use xlink:href="/main.svg#arrow-catalog-svg"></use>
+                </svg>
+            </div>
+            <div class="drop-down-menu-footer">
+                <div>
+                    <a href="">О нас</a>
+                </div>
+                <div>
+                    <a href="">Контакты</a>
+                </div>
+                <div>
+                    <a href="">Часто задаваемые вопросы</a>
+                </div>
+            </div>  
+        </div>
+        <div class="contact-info-footer">
+            <div class="btn-callback-footer">
+                <span>Не нашли нужный товар?</span>
+            </div>  
+            <a href="geo: 52.350141, 35.348603">
+                <div>
+                    <svg class="svg-icon-footer">
+                        <use xlink:href="/main.svg#map-marker-svg"></use>
+                    </svg>
+                    <span>Воинов-Интернационалистов 6</span>
+                </div>
+            </a>
+            <a href="tel:+79524920727">
+                <div>
+                    <svg class="svg-icon-footer">
+                        <use xlink:href="/main.svg#phone-svg"></use>
+                    </svg>
+                    <span>+7 (952) 492-07-27</span>
+                </div>
+            </a>  
+        </div>
+    </div>
+    <div class="line-footer">
+        <div>
+            <a href="https://vk.com/killmusiccustom">
+                <svg class="vk-icon-footer">
+                    <use xlink:href="/main.svg#vk-svg"></use>
+                </svg>
+            </a>       
+        </div>
+    </div>
+    <h5>2022 © Killmusic.ru</h5>
 </footer>
 
 </body>
