--- a/public/main.css
+++ b/public/main.css
@@ -426,7 +426,7 @@ header {
 .block-screen {
   opacity: 0;
   pointer-events: none;
-  position: absolute;
+  position: fixed;
   top: 0;
   right: 0;
   bottom: 0;
@@ -440,7 +440,7 @@ header {
 }
 
 .menu-slider {
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: 0;
   left: -100%;
