--- a/public/main.scss
+++ b/public/main.scss
@@ -497,7 +497,7 @@ header {
 .block-screen {
     opacity: 0;
     pointer-events: none;
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     bottom: 0;
@@ -512,7 +512,7 @@ header {
 }
 
 .menu-slider {
-    position: absolute;
+    position: fixed;
     top: 0;
     bottom: 0;
     left: -100%;
