--- a/public/main.scss
+++ b/public/main.scss
@@ -500,7 +500,7 @@ header {
     position: fixed;
     top: 0;
     right: 0;
-    bottom: 0;
+    bottom: -100px;
     left: 0;
     background: rgba(150, 150, 150, .7);
     z-index: 99;
@@ -515,7 +515,7 @@ header {
 .menu-slider {
     position: fixed;
     top: 0;
-    bottom: 0;
+    bottom: -100px;
     left: -100%;
     width: 300px;
     background: white;
