--- a/views/header-template.ejs
+++ b/views/header-template.ejs
@@ -85,7 +85,9 @@
                     <span>0</span>
                 </div>
             </div>
+            <%- include('catalog', { headLink: locals.headLink }) %>
         </div>
+        
     </header>
 
     <header class="mobile-screen-header">
