--- a/public/main.css
+++ b/public/main.css
@@ -168,6 +168,7 @@ header {
   color: #FF6600;
 }
 .fullscreen-header .bottom-header {
+  position: relative;
   width: 100%;
   height: 128px;
   border-top: 1px solid whitesmoke;
@@ -184,6 +185,7 @@ header {
   fill: #FF6600;
 }
 .fullscreen-header .bottom-header .bottom-header-block .headerCatalogBtn {
+  position: relative;
   display: flex;
   width: 175px;
   height: 50px;
@@ -571,9 +573,73 @@ header {
   fill: rgba(82, 129, 184, 0.7);
 }
 
+.catalog {
+  position: absolute;
+  width: 100%;
+  max-height: 0;
+  background: white;
+  overflow-y: scroll;
+  transition: max-height 0.3s;
+}
+.catalog.active {
+  max-height: calc(100vh - 192px);
+}
+.catalog::-webkit-scrollbar {
+  width: 0;
+}
+.catalog .catalog-flex {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  width: 80%;
+  height: 300px;
+  margin: auto;
+}
+.catalog .catalog-flex .catalog-one {
+  width: 300px;
+  height: 100px;
+  text-align: left;
+}
+.catalog .catalog-flex .catalog-one .catalog-first {
+  width: 100%;
+  height: 50px;
+  color: black;
+  line-height: 50px;
+  font-size: 30px;
+}
+.catalog .catalog-flex .catalog-one .catalog-first span {
+  cursor: pointer;
+  transition: color 0.2s;
+}
+.catalog .catalog-flex .catalog-one .catalog-first span:hover {
+  color: #FF6600;
+}
+.catalog .catalog-flex .catalog-one .catalog-second {
+  width: 100%;
+  height: 30px;
+  color: grey;
+  line-height: 30px;
+  font-size: 20px;
+}
+.catalog .catalog-flex .catalog-one .catalog-second span {
+  cursor: pointer;
+  transition: color 0.2s;
+}
+.catalog .catalog-flex .catalog-one .catalog-second span:hover {
+  color: #FF6600;
+}
+.catalog .catalog-flex .catalog-one .more-btn-catalog {
+  width: 100%;
+  height: 30px;
+  color: #FF6600;
+  line-height: 30px;
+  font-size: 20px;
+  cursor: pointer;
+}
+
 .wrap {
   width: 100%;
-  min-height: calc(100vh - 270px);
+  min-height: calc(100vh - 269px);
 }
 
 footer {
