--- a/views/catalog.ejs
+++ b/views/catalog.ejs
@@ -1,24 +1,137 @@
 <div class="catalog">
-    <div class="catalog-flex">
-        <div class="catalog-one">
-            <div class="catalog-first">
-                <span>Внешний вид</span>
-            </div>
-            <div class="catalog-second">
-                <span>Масло на ваз</span>
-            </div>
-            <div class="catalog-second">
-                <span>Масло на ваз</span>
-            </div>
-            <div class="catalog-second">
-                <span>Масло на ваз</span>
-            </div>
-            <div class="catalog-second">
-                <span>Масло на ваз</span>
-            </div>
-            <div class="more-btn-catalog">
-                <span>+ Ещё... 3</span>
-            </div>
-        </div>
+    <div class="sub-catalog">
+        <H1 onclick="scrollPageRight(this)">Внешний вид1</H1>
+        <span>item 1</span>
+        <span>item 2</span>
+        <span>item 3</span>
+        <span>item 4</span>
+        <span>item 5</span>
+        <span>more ++++</span>
+    </div>
+    <div class="sub-catalog">
+        <H1 onclick="scrollPageRight(this)">Внешний вид2</H1>
+        <span>item 1</span>
+        <span>item 2</span>
+        <span>item 3</span>
+        <span>item 4</span>
+        <span>item 5</span>
+        <span>more ++++</span>
+    </div>
+    <div class="sub-catalog">
+        <H1 onclick="scrollPageRight(this)">Внешний вид3</H1>
+        <span>item 1</span>
+        <span>item 2</span>
+        <span>item 3</span>
+        <span>item 4</span>
+        <span>item 5</span>
+        <span>more ++++</span>
+    </div>
+    <div class="sub-catalog">
+        <H1>Внешний вид</H1>
+        <span>item 1</span>
+        <span>item 2</span>
+        <span>item 3</span>
+        <span>item 4</span>
+        <span>item 5</span>
+        <span>more ++++</span>
+    </div>
+    <div class="sub-catalog">
+        <H1>Внешний вид</H1>
+        <span>item 1</span>
+        <span>item 2</span>
+        <span>item 3</span>
+        <span>item 4</span>
+        <span>item 5</span>
+        <span>more ++++</span>
+    </div>
+    <div class="sub-catalog">
+        <H1>Внешний вид</H1>
+        <span>item 1</span>
+        <span>item 2</span>
+        <span>item 3</span>
+        <span>item 4</span>
+        <span>item 5</span>
+        <span>more ++++</span>
+    </div>
+    <div class="sub-catalog">
+        <H1>Внешний вид</H1>
+        <span>item 1</span>
+        <span>item 2</span>
+        <span>item 3</span>
+        <span>item 4</span>
+        <span>item 5</span>
+        <span>more ++++</span>
+    </div>
+    <div class="sub-catalog">
+        <H1>Внешний вид</H1>
+        <span>item 1</span>
+        <span>item 2</span>
+        <span>item 3</span>
+        <span>item 4</span>
+        <span>item 5</span>
+        <span>more ++++</span>
+    </div>
+    <div class="sub-catalog">
+        <H1>Внешний вид</H1>
+        <span>item 1</span>
+        <span>item 2</span>
+        <span>item 3</span>
+        <span>item 4</span>
+        <span>item 5</span>
+        <span>more ++++</span>
+    </div>
+    <div class="sub-catalog">
+        <H1>Внешний вид</H1>
+        <span>item 1</span>
+        <span>item 2</span>
+        <span>item 3</span>
+        <span>item 4</span>
+        <span>item 5</span>
+        <span>more ++++</span>
+    </div>
+    <div class="sub-catalog">
+        <H1>Внешний вид</H1>
+        <span>item 1</span>
+        <span>item 2</span>
+        <span>item 3</span>
+        <span>item 4</span>
+        <span>item 5</span>
+        <span>more ++++</span>
+    </div>
+    <div class="sub-catalog">
+        <H1>Внешний вид</H1>
+        <span>item 1</span>
+        <span>item 2</span>
+        <span>item 3</span>
+        <span>item 4</span>
+        <span>item 5</span>
+        <span>more ++++</span>
+    </div>
+    <div class="sub-catalog">
+        <H1>Внешний вид</H1>
+        <span>item 1</span>
+        <span>item 2</span>
+        <span>item 3</span>
+        <span>item 4</span>
+        <span>item 5</span>
+        <span>more ++++</span>
+    </div>
+    <div class="sub-catalog">
+        <H1>Внешний вид</H1>
+        <span>item 1</span>
+        <span>item 2</span>
+        <span>item 3</span>
+        <span>item 4</span>
+        <span>item 5</span>
+        <span>more ++++</span>
+    </div>
+    <div class="sub-catalog">
+        <H1>Внешний вид</H1>
+        <span>item 1</span>
+        <span>item 2</span>
+        <span>item 3</span>
+        <span>item 4</span>
+        <span>item 5</span>
+        <span>more ++++</span>
     </div>
 </div>
