--- a/views/menu-slider.ejs
+++ b/views/menu-slider.ejs
@@ -8,7 +8,7 @@
                 </svg>
                 <span>Назад</span>
             </div>
-            <div class="catalog" onclick="scrollPageRight(this)">
+            <div class="menu-item" onclick="scrollPageRight(this)">
                 <span>Каталог</span>
                 <svg class="more-catalog-svg">
                     <use xlink:href="/main.svg#arrow-catalog-svg"></use>
@@ -24,7 +24,7 @@
                     <span>Бренды</span>
                 </div>
             </a>
-            <div class="catalog" onclick="scrollPageRight(this)">
+            <div class="menu-item" onclick="scrollPageRight(this)">
                 <span>Покупателям</span>
                 <svg class="more-catalog-svg">
                     <use xlink:href="/main.svg#arrow-catalog-svg"></use>
@@ -53,6 +53,8 @@
                 </svg>
             </a>
         </div>
+
+
         <div class="second-layer page">        
             <div class="back-btn-menu" onclick="scrollPageLeft(this)">
                 <svg class="arrow-back-svg-icon">
@@ -61,12 +63,29 @@
                 <span>Назад</span>
             </div>
             <h3></h3>
-            <div class="catalog" onclick="scrollPageRight(this)">
+            <div class="menu-item" onclick="scrollPageRight(this)">
                 <span>Каталог2</span>
                 <svg class="more-catalog-svg">
                     <use xlink:href="/main.svg#arrow-catalog-svg"></use>
                 </svg>
             </div>
+            <%- include('catalog', { headLink: locals.headLink }) %>
+        </div>
+        <div class="therd-layer page">        
+            <div class="back-btn-menu" onclick="scrollPageLeft(this)">
+                <svg class="arrow-back-svg-icon">
+                    <use xlink:href="/main.svg#arrow-back-svg"></use>
+                </svg>
+                <span>Назад</span>
+            </div>
+            <h3></h3>
+            <div class="menu-item" onclick="scrollPageRight(this)">
+                <span>Каталог2</span>
+                <svg class="more-catalog-svg">
+                    <use xlink:href="/main.svg#arrow-catalog-svg"></use>
+                </svg>
+            </div>
+            <%- include('catalog', { headLink: locals.headLink }) %>
         </div>
     </div>
 </div>
