--- a/public/main.css
+++ b/public/main.css
@@ -348,6 +348,7 @@ header {
 }
 .fullscreen-header .catalog {
   position: absolute;
+  left: 0;
   width: 100%;
   max-height: 0;
   background: red;
@@ -358,6 +359,7 @@ header {
   gap: 30px;
   padding-left: 30px;
   padding-right: 30px;
+  z-index: 70;
 }
 .fullscreen-header .catalog.active {
   max-height: calc(100vh - 192px);
@@ -733,25 +735,27 @@ footer .btn-footer-flex .contact-info-footer a div:hover {
 footer .line-footer {
   width: 80%;
   margin: auto;
-  position: relative;
+  display: flex;
+  justify-content: space-between;
 }
 footer .line-footer::before {
   content: "";
-  position: absolute;
-  top: 50%;
-  left: 0;
-  right: 0;
+  margin-top: 25px;
+  width: 40%;
   height: 1px;
   background: rgba(255, 255, 255, 0.08);
-  margin-top: -1px;
-  z-index: 1;
+}
+footer .line-footer::after {
+  content: "";
+  margin-top: 25px;
+  width: 40%;
+  height: 1px;
+  background: rgba(255, 255, 255, 0.08);
 }
 footer .line-footer div {
-  position: relative;
   display: inline-block;
   padding: 0 32px;
   background: #333;
-  z-index: 1;
 }
 footer .line-footer div a .vk-icon-footer {
   width: 50px;
